--- a/juegoConecta.html
+++ b/juegoConecta.html
@@ -19,7 +19,7 @@
 			<p>
 				Introduce la dimensión del tablero de juego (4-10):
 				<input type="text" id="dimension" name="dimension">
-				<input type="button" value="Genera Tablero" onclick="generaTablero()"/>
+				<input type="button" value="Genera Tablero" onclick="validarDatos()"/>
 			</p>
 			<p>
 				Selecciona el jugador que comienza el juego:
@@ -42,5 +42,5 @@
 	</div>
 </body>
 
-	<script src="juegoConecta2.js"></script>
+	<script src="conecta.js"></script>
 </html>
